fix: portlet poll on mobile

--- a/collective/rcse/resources/dev/less/mobile.less
+++ b/collective/rcse/resources/dev/less/mobile.less
@@ -500,3 +500,7 @@ form[name="folderContentsForm"]{
   background:#fff;
   margin-top:0px;
 }
+/* fix */
+div.portletpollresultholder{
+    width: 175px !important;
+}
